fix(dashboard): hide scrollbar on mobile

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -69,3 +69,15 @@ body {
 a.active {
   @apply text-gray-100 bg-gray-800 md:border-l-gray-100;
 }
+
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
